MANVIR SANDBOX/src/objects/Revenue_Type__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INTID__c</fullName>
        <description>Create for Migration Reference, Please don&apos;t delete this field</description>
        <label>INTID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_On_Time_Revenue__c</fullName>
        <formula>IF( AND(Opportunity__r.On_Time__c =0, Opportunity__r.IsClosed =TRUE), Amount__c ,NULL)</formula>
        <label>Not On Time Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Time_Revenue__c</fullName>
        <formula>IF( AND(Opportunity__r.On_Time__c =1, Opportunity__r.IsClosed =TRUE), Amount__c ,NULL)</formula>
        <label>On Time Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product &amp; Revenue Types</relationshipLabel>
        <relationshipName>Revenue_Type</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_s__c</fullName>
        <label>Partner(s)</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Centric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Wireless</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product &amp; Revenue Types</relationshipLabel>
        <relationshipName>R00N30000001tAnIEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <label>Support Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weighted_Product_Rev_Type_Amt__c</fullName>
        <formula>Amount__c *  Opportunity_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Product &amp; Rev Type Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Product &amp; Revenue Type</label>
    <nameField>
        <label>Product &amp; Revenue Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product &amp; Revenue Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>